aws-3-tier-p/sg-2.tf
# Security Group for Instance 2
resource "aws_security_group" "sg-2" {
  vpc_id = aws_vpc.vpc-1.id
  name   = "allows_http_ssh_server2"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-server2"
  }
}
